# workout-msg-editor

./: .gitignore  CMakeLists.txt  README.md  changelog.md
.github/workflows/: ci.yml
ext/: CMakeLists.txt
src/: build_version.hpp.in  ci.yml.in  main.cpp
src/wme/: app.cpp  app.hpp  context.cpp  context.hpp  error.hpp  fixed_string.hpp  im_input_text.cpp  im_input_text.hpp  log.cpp  log.hpp  options.hpp  ptr.hpp  util.hpp  workout.cpp  workout.hpp  workout_edit.cpp  workout_edit.hpp
